--- a/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="286" id="KGk-i7-Jjw" customClass="PromotionTableViewCell" customModule="HippoChat" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PromotionTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="286"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -23,22 +23,22 @@
                         <rect key="frame" x="5" y="5" width="310" height="275.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="B24-ZH-lMi">
-                                <rect key="frame" x="0.0" y="0.0" width="310" height="175"/>
+                                <rect key="frame" x="10" y="270.5" width="290" height="0.0"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="175" id="9F7-sk-WQP"/>
+                                    <constraint firstAttribute="height" id="9F7-sk-WQP"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="WhG-y0-qES">
-                                <rect key="frame" x="10" y="180" width="310" height="78.5"/>
+                                <rect key="frame" x="10" y="5" width="290" height="245.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S2-SK-Yv7">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="290" height="101.5"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9E-VN-wq9">
-                                        <rect key="frame" x="0.0" y="40" width="310" height="38.5"/>
+                                        <rect key="frame" x="0.0" y="106.5" width="290" height="139"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fcn-By-Hj8">
-                                <rect key="frame" x="274" y="263.5" width="31" height="10"/>
+                                <rect key="frame" x="269" y="255.5" width="31" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="10" id="S9J-6o-Wgd"/>
                                 </constraints>
@@ -57,15 +57,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="B24-ZH-lMi" firstAttribute="top" secondItem="Xud-Uu-5dH" secondAttribute="top" id="1SY-2q-622"/>
-                            <constraint firstItem="WhG-y0-qES" firstAttribute="leading" secondItem="B24-ZH-lMi" secondAttribute="leading" constant="10" id="9od-5g-eAG"/>
-                            <constraint firstAttribute="bottom" secondItem="Fcn-By-Hj8" secondAttribute="bottom" constant="2" id="Ex9-Vv-EIC"/>
-                            <constraint firstItem="B24-ZH-lMi" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" id="Gd7-eX-5J8"/>
-                            <constraint firstItem="WhG-y0-qES" firstAttribute="top" secondItem="B24-ZH-lMi" secondAttribute="bottom" constant="5" id="Oq8-9d-nXn"/>
-                            <constraint firstAttribute="trailing" secondItem="Fcn-By-Hj8" secondAttribute="trailing" constant="5" id="ZGg-2p-tCF"/>
-                            <constraint firstItem="Fcn-By-Hj8" firstAttribute="top" secondItem="WhG-y0-qES" secondAttribute="bottom" constant="5" id="b4h-Kd-yRz"/>
-                            <constraint firstItem="WhG-y0-qES" firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" constant="10" id="cTw-wL-0X1"/>
-                            <constraint firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" id="lXU-Eb-wX2"/>
+                            <constraint firstItem="WhG-y0-qES" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="10" id="4Fp-Qh-kG9"/>
+                            <constraint firstItem="WhG-y0-qES" firstAttribute="top" secondItem="Xud-Uu-5dH" secondAttribute="top" constant="5" id="77e-BE-OLr"/>
+                            <constraint firstItem="B24-ZH-lMi" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="10" id="Gd7-eX-5J8"/>
+                            <constraint firstAttribute="trailing" secondItem="WhG-y0-qES" secondAttribute="trailing" constant="10" id="KPC-fg-yDN"/>
+                            <constraint firstItem="Fcn-By-Hj8" firstAttribute="top" secondItem="WhG-y0-qES" secondAttribute="bottom" constant="5" id="NgF-q9-uN3"/>
+                            <constraint firstAttribute="bottom" secondItem="B24-ZH-lMi" secondAttribute="bottom" constant="5" id="Ort-tg-0bd"/>
+                            <constraint firstAttribute="trailing" secondItem="Fcn-By-Hj8" secondAttribute="trailing" constant="10" id="ZGg-2p-tCF"/>
+                            <constraint firstItem="B24-ZH-lMi" firstAttribute="top" secondItem="Fcn-By-Hj8" secondAttribute="bottom" constant="5" id="iSY-uc-gbl"/>
+                            <constraint firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" constant="10" id="lXU-Eb-wX2"/>
                         </constraints>
                     </view>
                 </subviews>
